--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,7 @@ html {
 .main-content {
   position: relative;
   top: 5.3125rem; /* To offset for fixed header. */
+
 }
 
 .center {
@@ -26,6 +27,7 @@ html {
 
 .image-container img {
   display: block;
+
 }
 
 @media only screen and (max-width: 760px) {
@@ -41,16 +43,25 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  height: 85px;
+  z-index: 10;
+
+
 }
 
 header .content {
   display: flex;
   align-items: center;
   padding: 1.875rem;
+  font-family: "Roboto-Regular", "Roboto";
+  color: #4A4A4A;
+  font-size: 1rem;
+  line-height: 1.6rem;
 }
 
 header .logo {
   flex: 1;
+  margin-left: 30px;
 }
 
 header nav ul {
@@ -71,6 +82,7 @@ nav a {
 header .icon {
   width: 1rem;
   padding-left: .75rem;
+  margin-right: 30px;
 }
 
 header .mobile {
@@ -117,6 +129,10 @@ header .mobile {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
+  background: url("../resources/images/banner-landingpage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 #sign-up-cta {
@@ -124,6 +140,8 @@ header .mobile {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
+  margin-top: 170px;
+  margin-left: 100px;
 }
 
 #sign-up-cta .content {
@@ -211,26 +229,35 @@ header .mobile {
 
 #features-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 4rem 5%;
   background-color: #f3f3f3;
+
 }
 
 .feature {
   flex: 1;
-  padding: 2rem;
-  margin: 0px 1.25rem;
+  padding: 2rem 0 2rem 0;
+  margin: 0 1.25rem;
   background-color: white;
+  width: 40%;
 }
 
 .feature .image-container {
   width: 90%;
   height: 65%;
-  margin: 0 auto;
+  margin: 2rem 2rem 2.5rem 2rem;
+}
+
+.image-container img {
+  height: 30rem;
+  margin-left: 2rem;
 }
 
 .feature h2 {
   padding-bottom: .5rem;
+  font-family: "Roboto-Bold";
+  line-height: 1.2rem;
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -238,6 +265,7 @@ header .mobile {
 
 .feature h3 {
   font-size: 1rem;
+  font-family: "Roboto-Light";
   line-height: 1.2;
   font-weight: 300;
   color: #4a4a4a;
@@ -276,7 +304,6 @@ header .mobile {
 }
 
 #filters-section .content {
-  padding: 0 .625rem;
   margin-bottom: 5rem;
 }
 
@@ -284,6 +311,8 @@ header .mobile {
   font-size: 2.25rem;
   font-weight: bold;
   color: white;
+  margin-top: 4rem;
+  font-family: "Roboto-Bold";
 }
 
 #filters-section .content h3 {
@@ -291,11 +320,20 @@ header .mobile {
   line-height: 1.4;
   font-weight: 300;
   color: white;
+  font-family: "Roboto-Light";
 }
 
 #filters-section .images-container {
+  display: flex;
   max-width: 100%;
-  padding: 0 1%;
+  padding: 5rem 1% 4rem 1%;
+
+}
+
+#filters-section .images-container img {
+  margin: 0 auto;
+  padding: 0;
+
 }
 
 @media only screen and (max-width: 760px) {
@@ -332,22 +370,25 @@ header .mobile {
 
 #quotes-section {
   background-color: #f3f3f3;
+
+
 }
 
-#quotes-section content {
+#quotes-section .content {
   padding: 5rem 0;
 }
 
-#quotes-section quote {
+#quotes-section .quote {
   padding-right: 1.875rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
   line-height: 1.1;
   font-style: italic;
   color: #4a4a4a;
+
 }
 
-#quotes-section quote-citation {
+#quotes-section .quote-citation {
   height: 1.875rem;
 }
 
@@ -356,9 +397,10 @@ header .mobile {
     padding: 1.875rem .625rem;
   }
 
-  #quotes-section quote {
+  #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
+
   }
 
   #quotes-section quote-citation {
@@ -373,13 +415,17 @@ header .mobile {
 footer {
   background-color: #9b9b9b;
   padding: 1.5rem 2rem;
+  height: 3.865rem;
 }
 
 footer .content {
   color: white;
   display: flex;
   font-size: .75rem;
+  margin-left: 2rem;
+  font-family: "Roboto-Regular";
 }
+
 
 footer .copyright {
   flex-grow: 1;
