--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,12 @@ html {
   font-size: 16px;
 }
 
+@font-face {
+  font-family: "Roboto-Bold";
+  src: url("https://fonts.googleapis.com/css?family=Roboto:700");
+  font-weight: 700;
+}
+
 .main-content {
   position: relative;
   top: 5.3125rem; /* To offset for fixed header. */
@@ -45,18 +51,17 @@ header {
   background-color: white;
   height: 85px;
   z-index: 10;
-
-
 }
 
 header .content {
   display: flex;
   align-items: center;
-  padding: 1.875rem;
+  padding: .5rem 0;
   font-family: "Roboto-Regular", "Roboto";
   color: #4A4A4A;
   font-size: 1rem;
   line-height: 1.6rem;
+  margin-top: 1rem;
 }
 
 header .logo {
@@ -80,16 +85,43 @@ nav a {
 }
 
 header .icon {
-  width: 1rem;
+  width: 1.1rem;
+  height: 1.1rem;
   padding-left: .75rem;
   margin-right: 30px;
+
 }
 
 header .mobile {
   display: none;
 }
 
+header .desktop .button {
+  display: none;
+}
+
+
+
 @media only screen and (max-width: 760px) {
+
+  header .desktop .button {
+    display: block;
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+    text-align: center;
+    margin-right: 2rem;
+  }
+
+  nav li {
+    padding-left: 2rem;
+  }
+
+}
+
+
+@media only screen and (max-width: 650px) {
   header .desktop {
     display: none;
   }
@@ -97,10 +129,6 @@ header .mobile {
   header .mobile {
     display: block;
     width: 100%;
-  }
-
-  header .content {
-    padding: .5rem 0;
   }
 
   header .mobile ul {
@@ -129,11 +157,11 @@ header .mobile {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
-  background: url("../resources/images/banner-landingpage.jpg");
+  background: url("../../resources/images/banner-landingpage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-
 }
+
 
 #sign-up-cta {
   padding: 0 5rem 2.5rem 5rem;
@@ -142,6 +170,7 @@ header .mobile {
   background-color: #9dc20b;
   margin-top: 170px;
   margin-left: 100px;
+
 }
 
 #sign-up-cta .content {
@@ -166,7 +195,7 @@ header .mobile {
 }
 
 #sign-up-cta .cursive {
-  font-family: "Damion", cursive;
+  font-family: "Damion", "cursive";
 }
 
 #sign-up-cta .striking {
@@ -180,18 +209,21 @@ header .mobile {
 }
 
 @media only screen and (max-width: 760px) {
+
   #sign-up-section {
     align-items: center;
     justify-content: center;
-    height: 28rem;
+    height: 30rem;
+    background-position: center;
   }
 
   #sign-up-cta {
-    position: static;
     width: auto;
     height: auto;
+    margin: 0;
     background-color: transparent;
     border: none;
+    padding-top: 5rem;
   }
 
   #sign-up-cta .content {
@@ -256,11 +288,13 @@ header .mobile {
 
 .feature h2 {
   padding-bottom: .5rem;
-  font-family: "Roboto-Bold";
-  line-height: 1.2rem;
-  font-size: 2.25rem;
-  font-weight: bold;
+  font-family: "Roboto";
+  line-height: 3rem;
+  font-size: 2.3rem;
+  font-weight: 700;
   color: #4a4a4a;
+  text-align: left;
+  margin-left: 1rem;
 }
 
 .feature h3 {
@@ -271,11 +305,12 @@ header .mobile {
   color: #4a4a4a;
 }
 
-@media only screen and (max-width: 890px) {
+@media only screen and (max-width: 990px) {
   .feature h2 {
     font-size: 1.125rem;
-    line-height: 1.3;
+    line-height: 2rem;
     font-weight: normal;
+    text-align: center;
   }
 
   .feature h3 {
@@ -286,13 +321,26 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #features-section {
-    flex-flow: column;
-    padding: 0;
+    flex-flow: row wrap;
+    padding: 1rem;
+
   }
 
   .feature {
-    margin: 0;
-    padding: 1.25rem 1rem 0 1rem;
+    margin: 0 0 0.5rem 1rem;
+    padding: 1.25rem 1rem 5rem 1rem;
+    height: 20rem;
+    width: 20rem;
+  }
+
+  .feature .image-container {
+    height: 15rem;
+    width: 15rem;
+
+  }
+
+  .feature .image-container img {
+
   }
 }
 
@@ -415,7 +463,7 @@ header .mobile {
 footer {
   background-color: #9b9b9b;
   padding: 1.5rem 2rem;
-  height: 3.865rem;
+  height: 2rem;
 }
 
 footer .content {
