--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+
 }
 
 @font-face {
@@ -49,7 +50,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
-  height: 85px;
+  height: 5.3125rem;
   z-index: 10;
 }
 
@@ -147,8 +148,30 @@ header .desktop .button {
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
+    border-radius: 4px;
   }
 }
+
+@media only screen and (max-width: 450px) {
+
+  header {
+    height: 3.3rem;
+
+  }
+
+  header .content {
+    padding: 0;
+  }
+
+  header .mobile .button {
+    height: 3px;
+    width: 8px;
+    padding: 0.4rem 0.8rem;
+    border-radius: 4px;
+    line-height: 2rem;
+  }
+}
+
 
 /* Sign Up Section */
 
@@ -215,6 +238,7 @@ header .desktop .button {
     justify-content: center;
     height: 30rem;
     background-position: center;
+
   }
 
   #sign-up-cta {
@@ -246,6 +270,8 @@ header .desktop .button {
 @media only screen and (max-width: 450px) {
   #sign-up-section {
     height: 20rem;
+    width: auto;
+    background-position: right;
   }
 
   #sign-up-cta h1 {
@@ -279,11 +305,12 @@ header .desktop .button {
   width: 90%;
   height: 65%;
   margin: 2rem 2rem 2.5rem 2rem;
+
 }
 
-.image-container img {
-  height: 30rem;
-  margin-left: 2rem;
+.image-container-features img {
+  width: 80%;
+  height: 50%;
 }
 
 .feature h2 {
@@ -291,7 +318,6 @@ header .desktop .button {
   font-family: "Roboto";
   line-height: 3rem;
   font-size: 2.3rem;
-  font-weight: 700;
   color: #4a4a4a;
   text-align: left;
   margin-left: 1rem;
@@ -303,6 +329,8 @@ header .desktop .button {
   line-height: 1.2;
   font-weight: 300;
   color: #4a4a4a;
+  text-align: left;
+  margin-left: 1rem;
 }
 
 @media only screen and (max-width: 990px) {
@@ -328,26 +356,69 @@ header .desktop .button {
 
   .feature {
     margin: 0 0 0.5rem 1rem;
-    padding: 1.25rem 1rem 5rem 1rem;
-    height: 20rem;
-    width: 20rem;
+    padding: 1rem 1rem 0 0;
+    height: 100%;
+    width: 50%;
   }
 
   .feature .image-container {
-    height: 15rem;
-    width: 15rem;
+    height: 100%;
+    width: 100%;
 
   }
 
   .feature .image-container img {
+    height: 15rem;
+    width: 15rem;
+  }
+}
 
+@media only screen and (max-width: 450px) {
+
+  #features-section {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 1rem 0 0 0;
+    margin: 0;
+  }
+
+  .feature {
+    padding: 0 0 1rem 0;
+    margin: 0;
+    background-color: white;
+    width: 100%;
+  }
+
+  .feature .image-container {
+    width: 90%;
+    height: 35%;
+    padding-bottom: 2rem;
+
+  }
+
+  .image-container-features img {
+    width: 80%;
+    height: 12rem;
+  }
+
+  .feature h2 {
+    padding: 1rem 1rem 0 0;
+  }
+
+  .feature h3 {
+    font-size: .875rem;
+    line-height: 1.35;
+    text-align: center;
+    padding: 1rem 1rem 0 0;
   }
 }
 
 /* Filters Section */
 
 #filters-section {
-  padding: 4rem 0;
+  padding: 2rem 0;
   background-color: #4a4a4a;
 }
 
@@ -374,11 +445,13 @@ header .desktop .button {
 #filters-section .images-container {
   display: flex;
   max-width: 100%;
-  padding: 5rem 1% 4rem 1%;
+  padding: 5rem 1% 1rem 1%;
 
 }
 
 #filters-section .images-container img {
+ width: 100%;
+ height: 100%;
   margin: 0 auto;
   padding: 0;
 
@@ -408,6 +481,9 @@ header .desktop .button {
   #filters-section .images-container {
     padding: 0;
   }
+}
+
+@media only screen and (max-width: 450px) {
 
   #filters-section .extra {
     display: none;
@@ -417,27 +493,31 @@ header .desktop .button {
 /* Quotes Section */
 
 #quotes-section {
+
   background-color: #f3f3f3;
 
 
 }
 
 #quotes-section .content {
-  padding: 5rem 0;
+  display: flex;
+  justify-content: space-around;
+  padding: 3rem 0;
+  text-align: left;
 }
 
 #quotes-section .quote {
-  padding-right: 1.875rem;
+  margin-left: 3rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
   line-height: 1.1;
   font-style: italic;
   color: #4a4a4a;
-
 }
 
 #quotes-section .quote-citation {
   height: 1.875rem;
+  margin-right: 3rem;
 }
 
 @media only screen and (max-width: 760px) {
@@ -448,21 +528,43 @@ header .desktop .button {
   #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
+  }
+
+  #quotes-section .quote-citation {
+    margin-top: 1rem;
+    margin-right: 2rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+
+  #quotes-section .content {
+    padding: 1.875rem 0;
+    flex-flow: row wrap;
+    align-content: center;
 
   }
 
-  #quotes-section quote-citation {
-    display: block;
-    padding-top: 1rem;
-    margin: auto;
+  #quotes-section .quote {
+    font-size: 1.5rem;
+    line-height: 1.4;
+    margin: 0 1rem 0 1rem;
+    padding: 0;
+    text-align: center;
   }
+
+  #quotes-section .quote-citation {
+    margin-top: 1rem;
+    margin: 1rem 0 0 1rem;
+  }
+
 }
 
 /* Footer */
 
 footer {
   background-color: #9b9b9b;
-  padding: 1.5rem 2rem;
+  padding: 0.5rem 2rem;
   height: 2rem;
 }
 
@@ -470,7 +572,7 @@ footer .content {
   color: white;
   display: flex;
   font-size: .75rem;
-  margin-left: 2rem;
+  margin: 1rem 0 0 2rem;
   font-family: "Roboto-Regular";
 }
 
@@ -480,7 +582,25 @@ footer .copyright {
 }
 
 @media only screen and (min-width: 760px) {
+
   footer .content {
     font-size: .625rem;
   }
+}
+
+@media only screen and (max-width: 450px) {
+
+  footer {
+    height: 1rem;
+    padding: 1rem 0;
+
+  }
+
+  footer .content {
+    font-size: .625rem;
+    margin: 0 1rem;
+
+  }
+
+
 }
